add: compremento atividade do dia 06/02/2025

--- a/package.json
+++ b/package.json
@@ -1,5 +1,26 @@
 {
   "dependencies": {
-    "express": "^4.21.2"
-  }
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "init": "^0.1.2"
+  },
+  "name": "uc05",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ZBatista26/UC05.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/ZBatista26/UC05/issues"
+  },
+  "homepage": "https://github.com/ZBatista26/UC05#readme"
 }
